--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,yarn
-# Edit at https://www.toptal.com/developers/gitignore?templates=node,visualstudiocode,yarn
+# Created by https://www.toptal.com/developers/gitignore/api/yarn,node,visualstudiocode,nextjs,terraform
+# Edit at https://www.toptal.com/developers/gitignore?templates=yarn,node,visualstudiocode,nextjs,terraform
+
+### NextJS ###
+# Next build dir
+.next/
 
 ### Node ###
 # Logs
@@ -142,6 +146,42 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
+### Terraform ###
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+crash.*.log
+
+# Exclude all .tfvars files, which are likely to contain sentitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+#
+*.tfvars
+
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Include override files you do wish to add to version control using negated pattern
+# !example_override.tf
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+# example: *tfplan*
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -180,4 +220,4 @@ dist
 # and uncomment the following lines
 # .pnp.*
 
-# End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,yarn
+# End of https://www.toptal.com/developers/gitignore/api/yarn,node,visualstudiocode,nextjs,terraform
