--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -6,7 +6,36 @@ on:
 
 jobs:
   build:
+    name: Building Next.js App from Source
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install Production Dependencies
+        uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: install --frozen-lockfile
+      - name: Building Next.js App
+        uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: build
+      - uses: actions/upload-artifact@master
+        with:
+          name: build
+          path: .next/*
+
+  deploy:
+    name: Deploying Docker Image
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - uses: actions/download-artifact@master
+        with:
+          name: build
+          path: .next/*
+      - name: Build Docker Image
+        run: docker build -t ghcr.io/iamfj/my-portfolio:${GITHUB_HEAD_REF} .
+      - name: Publish Docker Image
+        run: docker push ghcr.io/iamfj/my-portfolio
