--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -38,4 +38,4 @@ jobs:
       - name: Build Docker Image
         run: docker build -t ghcr.io/iamfj/my-portfolio:${GITHUB_REF##*/} .
       - name: Publish Docker Image
-        run: docker push ghcr.io/iamfj/my-portfolio
+        run: docker push ghcr.io/iamfj/my-portfolio:${GITHUB_REF##*/}
