--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -37,5 +37,7 @@ jobs:
           path: .next/*
       - name: Build Docker Image
         run: docker build -t ghcr.io/iamfj/my-portfolio:${GITHUB_REF##*/} .
+      - name: Login to GitHub Container Registry (ghcr.io)
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
       - name: Publish Docker Image
         run: docker push ghcr.io/iamfj/my-portfolio:${GITHUB_REF##*/}
