--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -24,8 +24,8 @@ jobs:
           name: build
           path: .next/*
 
-  deploy:
-    name: Deploying Docker Image
+  publish:
+    name: Publish Docker Image
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -36,8 +36,44 @@ jobs:
           name: build
           path: .next/*
       - name: Build Docker Image
-        run: docker build -t ghcr.io/iamfj/my-portfolio:${GITHUB_REF##*/} .
+        run: docker build -t ghcr.io/${{ github.actor }}/${{ github.event.repository.name }}:${GITHUB_REF##*/} .
       - name: Login to GitHub Container Registry (ghcr.io)
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
       - name: Publish Docker Image
-        run: docker push ghcr.io/iamfj/my-portfolio:${GITHUB_REF##*/}
+        run: docker push ghcr.io/${{ github.actor }}/${{ github.event.repository.name }}:${GITHUB_REF##*/}
+
+  deploy:
+    name: Deploy to Google Cloud Platform
+    runs-on: ubuntu-latest
+    needs: publish
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Login to GitHub Container Registry (ghcr.io)
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+      - name: Setup Google Cloud Platform
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          service_account_email: ${{ secrets.GCP_EMAIL }}
+          service_account_key: ${{ secrets.GCP_KEY }}
+          export_default_credentials: true
+      - name: Pull Docker Image
+        run: docker pull ghcr.io/iamfj/${{ github.event.repository.name }}:${GITHUB_REF##*/}
+      - name: Relabel Docker Image
+        run: docker tag \
+          ghcr.io/${{ github.actor }}/${{ github.event.repository.name }}:${GITHUB_REF##*/} \
+          gcr.io/${{ secrets.GCP_PROJECT }}/${{ secrets.GCP_APPLICATION }}:${GITHUB_REF##*/}
+      - name: Configure Docker
+        run: gcloud auth configure-docker
+      - name: Public Docker Image
+        run: |
+          gcloud config set project ${{ secrets.GCP_PROJECT }}
+          gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT }}/${{ secrets.GCP_APPLICATION }}:${GITHUB_REF##*/}
+          gcloud config set run/region us-central1
+      - name: Deploy to Google Cloud Platform
+        run: |
+          gcloud run deploy ${{ secrets.GCP_APPLICATION }} \
+            --image gcr.io/${{ secrets.GCP_PROJECT }}/${{ secrets.GCP_APPLICATION }}:${GITHUB_REF##*/} \
+            --platform managed \
+            --allow-unauthenticated \
+            --memory 512M
